<resources>
    <string name="app_name">NeuroTest</string>
    <string name="take_the_tests">Take the tests</string>
    <string name="consult_with_a_doctor">Consult with a doctor</string>
    <string name="profile_and_stats">Profile and stats</string>
    <string name="its_just_a_image">Its just a image</string>
    <string name="test_of_attention">Test of attention</string>
    <string name="memory_test">Memory test</string>
    <string name="logic_test">Logic test</string>
    <string name="reaction_test">Reaction test</string>
    <string name="math_test">Math test</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome!</string>
    <string name="surname">Surname</string>
    <string name="statistics">Statistics</string>
    <string name="edit_profile">Edit profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="enter_your_data">Enter your data</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_some_extra_information_optional">Enter some extra information(optional)</string>
    <string name="apply">Apply</string>
    <string name="deleting_profile">Deleting profile</string>
    <string name="do_you_really_want_to_delete_your_account_all_statistics_will_be_lost">Do you really want to delete your account? All statistics will be lost!</string>
    <string name="select_one_of_the_test">Select one of the test</string>
    <string name="set_settings_for_test">Set settings for test:</string>
    <string name="attention_test_description">The test will include a field with your dimensions. You will have to choose the letter shown on the screen among the others.</string>
    <string name="width">Width:</string>
    <string name="height">Height:</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="speech_test">Speech test</string>
    <string name="find">Find</string>
    <string name="yes">Yes</string>
    <string name="no_back">No, back</string>
    <string name="ok">OK</string>
    <string name="congratulation">Congratulation</string>
    <string name="speech_test_description">In this test you will have a certain number of pictures to choose from below. Your task will be to recognize and name these words into the microphone.</string>
    <string name="number_of_words">Number of words</string>
    <string name="allow_access_to_the_microphone">Allow access to the microphone</string>
    <string name="say">Say...</string>
    <string name="try_again">Try again</string>
    <string name="you_have_founded_in_just">You have founded [%1$s] in just %2$s!</string>
    <string name="no_not_this_letter_try_again">No, not this letter, try again!</string>
    <string name="you_have_correctly_recognized_pictures">You have correctly recognized %1$s pictures!</string>
    <string name="again">Again</string>
    <string name="next">Next</string>
    <string name="you_said">You said %1$s</string>
    <string name="memory_test_description">In the memory test you will see a chain of numbers, their number you can customize below. After all the numbers are shown, your task is to recall them and enter them on the panel that appears.</string>
    <string name="length_of_sequence">Length of sequence</string>
    <string name="memorize_it">Memorize it!</string>
    <string name="try_to_remember_the_numbers">Try to remember the numbers!</string>
    <string name="logic_test_description">In the logic test, you will have to read 4 words and choose one extra that has little or nothing to do with all the others. Below, choose how many questions will be on the test.</string>
    <string name="number_of_questions">Number of questions</string>
    <string name="find_the_extra_word">Find the extra word</string>
    <string name="you_have_answered_correctly_times">You have answered correctly %1$s/%2$s times!</string>
    <string name="reaction_test_description">In the reaction test, you will have to press the button as fast as possible after it changes its color. No need for customization.</string>
    <string name="press_the_button_when_you_are_ready">Press the button when you are ready</string>
    <string name="it_s_early_wait_for_the_button_to_change_color">It\'s early, wait for the button to change color.</string>
    <string name="math_test_description">This is basic math test. You will have to solve a certain number of math examples. Select the amount you want to solve below.</string>
    <string name="number_of_math_examples">Number of math examples</string>
    <string name="number_of_example">Number of example:</string>
    <string name="check_answer">Check answer</string>
    <string name="firstly_enter_the_answer_in_the_line">Firstly enter the answer in the line</string>
    <string name="mistake_previous_word_was">Mistake, previous word was %1$s</string>
    <string name="your_statistics">Your statistics</string>
    <string name="something">Something</string>
    <string name="your_stats_are_empty">Your stats are empty</string>
    <string name="trying_to_connect_you_with_available_specialist">Trying to connect you with available specialist...</string>
    <string name="typing">typing...</string>
    <string name="hi_how_i_can_help_you">Hi, how I can help you?</string>
    <string name="you_must_be_registered_for_a_consultation">You must be registered for a consultation</string>
    <string name="send_your_stats">Send your stats</string>
    <string name="stats_were_included_in_message">Stats were included in message</string>
    <string name="hello_i_m_please_check_my_stats">Hello, I\'m %1$s %2$s.\nPlease, check my stats.</string>
</resources>