<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".presentation.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/main_buttons_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="30dp"
        app:cardElevation="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/abc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/take_the_tests"
                android:textSize="20sp"
                style="@style/SmallButtonStyle"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="40dp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/consultation_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consult_with_a_doctor"
                android:textSize="20sp"
                style="@style/SmallButtonStyle"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="30dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/profile_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_and_stats"
                android:textSize="20sp"
                style="@style/SmallButtonStyle"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="40dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:contentDescription="@string/its_just_a_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/brain"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_buttons_card"/>
</androidx.constraintlayout.widget.ConstraintLayout>