<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profileNstats.ProfileNStats"
    android:background="@color/light_green">


    <androidx.cardview.widget.CardView
        android:id="@+id/text_background_layout_pr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        app:cardElevation="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-20dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/text_layout_pr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp">

            <ImageButton
                android:id="@+id/profile_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/its_just_a_image"
                android:src="@drawable/back_button_resize"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/welcome_text_pr"
                app:layout_constraintBottom_toBottomOf="@id/welcome_text_pr"/>

            <TextView
                android:id="@+id/welcome_text_pr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/name_pr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome_text_pr"/>
            <TextView
                android:id="@+id/surname_pr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_pr"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/stat_image_pr"
        android:contentDescription="@string/its_just_a_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttons_background_layout_pr"
        app:layout_constraintTop_toBottomOf="@id/text_background_layout_pr"
        android:layout_margin="40dp"
        android:src="@drawable/statspng"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/buttons_background_layout_pr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="50dp">

        <LinearLayout
            android:id="@+id/buttons_layout_pr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete_profile_pr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SmallButtonStyle"
                android:text="@string/delete_profile"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edit_profile_pr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SmallButtonStyle"
                android:text="@string/edit_profile"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/stats_button_pr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SmallButtonStyle"
                android:text="@string/statistics"
                android:textSize="20sp"
                android:layout_marginHorizontal="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>