<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.tests.reaction.ReactionTestSettings"
    android:background="@color/light_green">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="30dp"
        app:cardElevation="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/h1text_rts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/set_settings_for_test"
                android:textSize="25sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/description_text_rts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/h1text_rts"
                app:layout_constraintBottom_toBottomOf="@id/start_button_rts"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/reaction_test_description"
                android:textSize="25sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reaction_test_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SmallButtonStyle"
                android:text="@string/back"
                android:textSize="20sp"
                android:paddingHorizontal="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/start_button_rts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SmallButtonStyle"
                android:text="@string/start"
                android:textSize="20sp"
                android:paddingHorizontal="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>