<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp"
    app:cardElevation="50dp"
    android:layout_marginVertical="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/stat_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/attention_test_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_of_attention"
            android:textSize="17sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stat_date"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/attention_stat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/something"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attention_test_name"
            android:layout_marginStart="22dp"/>

        <TextView
            android:id="@+id/memory_test_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_test"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stat_date"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/memory_stat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/something"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/memory_test_name"
            android:layout_marginEnd="22dp"/>

        <TextView
            android:id="@+id/logic_test_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logic_test"
            android:textSize="17sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attention_stat_text"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/logic_stat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/something"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logic_test_name"
            android:layout_marginStart="22dp"/>

        <TextView
            android:id="@+id/reaction_test_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reaction_test"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/memory_stat_text"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/reaction_stat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/something"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reaction_test_name"
            android:layout_marginEnd="22dp"/>

        <TextView
            android:id="@+id/math_test_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/math_test"
            android:textSize="17sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logic_stat_text"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/math_stat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/something"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/math_test_name"
            android:layout_marginStart="22dp"/>

        <TextView
            android:id="@+id/speech_test_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speech_test"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reaction_stat_text"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/speech_stat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/something"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/speech_test_name"
            android:layout_marginEnd="22dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>